--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.10",
+    "date-fns": "^2.9.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
